# PythonPerfc_09_12_24

./: .gitignore
Concurrence/: Threads.ipynb  daemon.py  local.py  without_local.py
Concurrence/asyncio/: aiofiles_demo.py  as_completed.py  callback.py  context_manager_asynchrone.py  exercice3.py  exerice1.py  exerice1_aiofiles.py  exerice2.py  first_demo.py  gather.py  methode_task.py
FrameworkSpecialise/: dom_exploration.py  dom_modification.py  livres.xml  livres_modified.xml  sax.py  stax.py  utangle.py
LoggingMonitoring/config/: logconfig.yaml  main.py
LoggingMonitoring/logging/: filter.py  loggingfirst.py  rotatingfilehandler.py  timeRotatingFileHandler.py
LoggingMonitoring/logging/mon_projet/: main.py
LoggingMonitoring/logging/mon_projet/module_propagation/: sous_module_propagation.py
LoggingMonitoring/monitoring/: psutils_demo.py  schedule_demo.py
MetaProgramming/: DataDescriptors.ipynb  Dataclasses.ipynb  DecorateursDeClasses.ipynb  HeritageEtMro.ipynb  Metaclasse.ipynb  petite_demo_protocole.ipynb
SyntaxeAvancee/: ContextManager.ipynb  Decorators.ipynb  SyntaxeAvancee.ipynb  explosionram.py  fichier.txt  generator.py
package/demonstration_old_setuptools/: MANIFEST.in  setup.py
package/demonstration_poetry/: pyproject.toml
package/demonstration_poml_setuptools/: pyproject.toml
package/import/demo1/: main.py  utils.py
package/import/demo2/: main.py
package/import/demo2/utils/: __init__.py  salut.py
package/import/demo3/: main.py
package/import/demo3/utils/: __init__.py  salut.py
package/import/demo3/utils/math/: operations.py
