[tool.poetry]
name = "eductools"
version = "0.1.0"
description = "package for students"
authors = ["PaulErnest <PaulErMartin@yahoo.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = {version = "^2.1.3"}

[tool.poetry.extras]
requests-feature = ["requests"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = {version = "^8.3.3"}
pytest-cov = "^6.0.0"

[tool.poetry.group.quality.dependencies]
ruff =  "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
