[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EducTools"
version = "0.1.0"
description = "Outils d'apprentissage pour étudiants."
readme = "README.md"
keywords = ["éducation", "apprentissage", "mathématiques", "outils"]
license = {text = "MIT"}
authors = [
    {name = "Nom de l'Auteur", email = "auteur@example.com"}
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
math = "EducTools.cli.math_tools_cli:calcul_cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Include additional files for sdist
"EducTools" = [
    "examples/*.py",
]
